<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:weightSum="10"
    android:orientation="vertical"
    tools:context=".View.InputFragment"
    android:id="@+id/fragment_input"
    android:layout_margin="70dp"
    android:background="@color/background">


    <TextView
        android:id="@+id/edit_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:gravity="center"
        android:text="@string/add_item"
        android:textColor="@color/button_text"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="18dp"
        android:background="@android:color/darker_gray" />

    <EditText
        android:id="@+id/edit_item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="monospace"
        android:hint="@string/item_name"
        android:paddingStart="10dp"
        android:paddingTop="8dp"
        android:textColor="@color/button_text"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edit_item_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:digits="0123456789.,"
        android:fontFamily="monospace"
        android:hint="@string/item_value"
        android:inputType="number"
        android:paddingStart="10dp"
        android:paddingTop="3dp"
        android:textColor="@color/button_text"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edit_item_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="monospace"
        android:hint="@string/yyyy_mm_dd"
        android:paddingStart="10dp"
        android:paddingTop="3dp"
        android:textColor="@color/button_text"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edit_item_make"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="monospace"
        android:hint="@string/item_make"
        android:paddingStart="10dp"
        android:paddingTop="3dp"
        android:textColor="@color/button_text"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edit_item_model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="monospace"
        android:hint="@string/model"
        android:paddingStart="10dp"
        android:paddingTop="3dp"
        android:textColor="@color/button_text"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edit_serialno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="monospace"
        android:hint="@string/serial_number"
        android:paddingStart="10dp"
        android:paddingTop="3dp"
        android:textColor="@color/button_text"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edit_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="monospace"
        android:hint="@string/description"
        android:paddingStart="10dp"
        android:paddingTop="3dp"
        android:textColor="@color/button_text"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edit_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="monospace"
        android:hint="@string/comment"
        android:paddingStart="10dp"
        android:paddingTop="3dp"
        android:textColor="@color/button_text"
        android:textSize="15sp" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/tag_chip"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_style"
        android:backgroundTint="@color/white">

    </com.google.android.material.chip.ChipGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/scan_button"
        android:layout_width="189dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/square_button"
        android:backgroundTint="@color/taskbar"
        android:fontFamily="monospace"
        android:text="Scan +"
        android:textColor="@color/button_text"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</LinearLayout>